added sonatype deployment support. minor fixes and updates